# Game_XClicker_Elite

./: .gitignore  APRES_CLONE.bat  BUILD.bat  BUILD_CPP.bat  CHECK_VERSION.py  CLONE_FRESH.bat  CLONE_PROPRE.bat  CMakeLists.txt  CMakePresets.json  CORRIGER_LOCAL.ps1  FIX_PULL.bat  FIX_RGB.bat  FIX_START.bat  GameXClicker.py  INSTALL_COMPLET.ps1  LAUNCH_EXE.bat  LAUNCH_NATIVE.bat  LAUNCH_WEB.bat  LISEZMOI_INSTALL.txt  METTRE_A_JOUR.bat  METTRE_A_JOUR.py  OUVRE_MOI.py  OUVRE_MOI.pyw  PYCHARM_SETUP.bat  README.md  REPARER.bat  REPARER.py  RESTORE_ALL_PROJECTS.bat  RESTORE_ALL_PROJECTS.ps1  RUN_TESTS.bat  START.bat  TELECHARGER_MANQUANT.bat  TELECHARGER_MANQUANT.ps1  UPDATE.bat  Xmacro_main.py  build.spec  build_and_run.bat  build_debug.bat  config_ui.py  engine_win32.py  (+8 more)
app/: Application.cpp  ClickSoundFilter.cpp  ClickSoundFilter.h  PageRegistry.cpp  PageRegistry.h  ThemeManager.cpp
assets/brand/: README.md  site.webmanifest
assets/mouse/: README.md
cmake/: DeployQt.cmake  OutputLayout.cmake  SetupQt.cmake
config/: asset_system.py  paths.py
core/: AppPaths.cpp  AppPaths.h  AppState.h  AssetGenerator.cpp  AssetGenerator.h  Constants.h  Enums.h  Logger.cpp  UiSound.cpp  UiSound.h  engine.py  rgb_engine.py  win32_input.py
cpp/: ARCHITECTURE.txt  CMakeLists.txt
cpp/src/: control_panel.cpp  control_panel.h  main_qt.cpp
cpp/src/app/: bootstrap.cpp  bootstrap.hpp
cpp/src/config/: paths.cpp  paths.hpp
cpp/src/core/: engine.cpp  engine.hpp  rgb_engine.hpp
cpp/src/services/: device_scanner.cpp  device_scanner.hpp  engine_proxy.cpp  engine_proxy.hpp  profile_manager.cpp  profile_manager.hpp  sidecar_api.cpp  sidecar_api.hpp
cpp/src/ui/qt/: control_panel_window.cpp  control_panel_window.hpp
docs/: STRUCTURE.md
launcher/: LAUNCH_DESKTOP.bat  desktop_main.py
models/: MacroModel.cpp
nodejs/: package-lock.json  package.json  server.js
pages/Dashboard/: DashboardPage.h
pages/DeviceCenter/: DeviceCenterPage.cpp  DeviceCenterPage.h
pages/LightingEngine/: LightingPage.cpp
pages/MacroLibrary/: MacroLibraryPage.cpp
pages/MacroStudio/: MacroStudioPage.h
pages/ProfileManager/: ProfileManagerPage.cpp
pycharm/: Game_XClicker_Elite.run.xml
resources/: gamex.qrc
scripts/: BUILD_EXE.bat  CREATE_DESKTOP_SHORTCUT.ps1  __init__.py  _env.bat  build_core.bat  build_env.bat  build_exe.py  clean_vs_cmake_artifacts.bat  download_mouse_assets.bat  download_mouse_assets.ps1  fix_ui_conflict.py  generate_icon.py  migrate_build_layout.bat  repair_launchers.py
services/: MacroEngine.cpp  MacroEngine.h  ProfileService.cpp  __init__.py  bootstrap.py  device_scanner.py  engine_proxy.py  profile_manager.py  sidecar_api.py
styles/: dock.qss  main.qss  sidebar.qss  titlebar.qss
tests/: conftest.py  test_bootstrap.py  test_device_scanner.py  test_engine.py  test_sanctuary_ui.py
ui/: __init__.py  asset_system.py  control_center.py  main_window.py  mission_control.py  sanctuary_window.py
ui-web/: index.html
ui-web/css/: app.css  icue.css
ui-web/js/: api.js  app.js  config.js
ui/pages/: devices_page.py  home_page.py  macros_page.py
ui/styles/: diablo_theme.py  icue_theme.py  mission_theme.py
ui/tabs/: __init__.py  rgb_tab.py
ui/widgets/: device_center_view.py  device_strip.py  lighting_setup_panel.py  macro_panel.py  mural_panel.py  sensor_panel.py  sidebar.py
utils/: bootstrap.py  legacy_patch.py
widgets/mouse/: Mouse3DWidget.cpp  Mouse3DWidget.h  MouseWidget.cpp  MouseWidget.h
widgets/sidebar/: SidebarWidget.cpp
widgets/stack/: AnimatedStackedWidget.cpp  AnimatedStackedWidget.h
widgets/titlebar/: TitleBarWidget.cpp  TitleBarWidget.h  WindowChromeButton.cpp  WindowChromeButton.h
windows/: MainWindow.cpp  MainWindow.h
